<resources>
    <string name="app_name">SkorAdam</string>
    <string name="splash">Splash</string>
    <string name="loading">Loading...</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="retry">Retry</string>
    <string name="action_settings">Settings</string>
    <string name="failed_to_connect_with_server">Failed to connect with server</string>
    <string name="mon">Pzt</string>
    <string name="tues">Sal</string>
    <string name="wed">Çar</string>
    <string name="thur">Per</string>
    <string name="fri">Cum</string>
    <string name="sat">Cmt</string>
    <string name="sun">Paz</string>
    <string name="cal_name">Seç</string>
    <string name="iv">I.Y.</string>
    <string name="ms">M.S</string>
    <string name="detay">Detay</string>
    <string name="iddaa">iddaa</string>
    <string name="dk">dk.</string>
    <string name="postponed">Ertelendi</string>
    <string name="matches">Maçlar</string>
    <string name="number">No</string>
    <string name="player_name">Oyuncu</string>
    <string name="position">Pos</string>
    <string name="country">Ülke</string>
    <string name="stats">İstatistikler</string>
    <string name="team_details">Takim Detayi</string>
    <string name="stadium">Stadyum</string>
    <string name="club_information">Kulup Bilgileri</string>
    <string name="club_official_name">Kulup Resmi Adi</string>
    <string name="year_founded">Kuruluş Yili</string>
    <string name="club_head">Kulüp Başkanı</string>
    <string name="coach">Teknik Direktör</string>
    <string name="website">Web Sitesi</string>
    <string name="twitter">Twitter Adresi</string>
    <string name="toolbar_favorite">Favorilerim</string>
    <string name="live">Canlı</string>
    <string name="standings">Puan/Fiks.</string>
    <string name="turkey">Turkey</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_page">DetailPageActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="whoWillWin">Kim Kazanır?</string>
    <string name="detal_page_standings">Puan Durumu</string>
    <string name="main">Genel</string>
    <string name="homeTeam">İç Saha</string>
    <string name="awayTeam">Dıs saha</string>
    <string name="team">Takım</string>
    <string name="team_squad">%1$s Takim Kadrosu</string>
    <string name="goalAverage">Gol Ortalamaları</string>
    <string name="comments">Tahmin Ligi</string>
    <string name="matchIdea">Senin Tahminin</string>
    <string name="liveDetailPage">Devam Ediyor</string>
    <string name="statusPlayed">Sona Erdi</string>
    <string name="halfTime">IY</string>
    <string name="statusCanceled">İptal</string>
    <string name="draw">Beraberlik</string>
    <string name="stadiumCapacity">Kapasite</string>
    <string name="yearBuilt">İnşa Tarihi</string>
    <string name="attendance">Doluluk</string>
    <string name="noComments">Bu maç ile ilgili bir tahmin bulunmamaktadır.</string>
    <string name="recent5">Son 5 Maç</string>
    <string name="recent5home">Evindeki Son 5 Maç</string>
    <string name="recent5away">Deplasmandaki Son 5 Maç</string>
    <string name="head2head">Karşılıklı</string>
    <string name="puan">Puan/Fiks.</string>
    <string name="fullTime">Maç Sonucu</string>
    <string name="prediction">Senin Tahminin</string>
    <string name="halfTimeScore">İlk Yarı</string>
    <string name="doubleChance">Çifte Şans</string>
    <string name="handicap">Handikap</string>
    <string name="mutalgoal">Karşılıklı Gol</string>
    <string name="subtop">Alt-Üst</string>
    <string name="totalGoals">Toplam Gol</string>
    <string name="submit">Gönder</string>
    <string name="statistics">İstatistik</string>
    <string name="matchStatistics">Maç İstatistikleri</string>
    <string name="gameStatistics">Oyun İstatistikleri</string>
    <string name="avgPercents">Ortalama Topla Oynama Yüzdesi</string>
    <string name="fou">Faul</string>
    <string name="sot">Toplam Şut</string>
    <string name="son">İsabetli Şut</string>
    <string name="soff">İsabetsiz Şut</string>
    <string name="cor">Kornerler</string>
    <string name="blk">Kurtarış</string>
    <string name="frk">Frikik</string>
    <string name="off">Ofsayt</string>
    <string name="head2headMatches">Karşılıklı Maçlar</string>
    <string name="totalGamePercentage">Topla Oynama Yüzdesi</string>
    <string name="titleGoller">Goller</string>
    <string name="titleAssists">Asist</string>
    <string name="titleCards">Kartlar</string>
    <string name="titleSubstitution">Oyuncu Değişiklikleri</string>
    <string name="detailedStatisticHeader">Ortalama İstatistikler</string>
    <string name="matchResultIddaa">Maç Sonu İddaa Oranları</string>
    <string name="halfTimeResultIddaa">İlk Yarı İddaa Oranları</string>
    <string name="doubleChanceIddaa">Çifte Şans İddaa Oranları</string>
    <string name="handicapResultIddaa">Handikap İddaa Oranları</string>
    <string name="aboveBelow15ResultIddaa">1.5 Alt Üst İddaa Oranları</string>
    <string name="aboveBelow35ResultIddaa">3.5 Alt Üst İddaa Oranları</string>
    <string name="aboveBelow25ResultIddaa">2.5 Alt Üst İddaa Oranları</string>
    <string name="aboveBelowHalfTime15ResultIddaa">1.5 Alt Üst İddaa Oranları</string>
    <string name="TotalGoalResultIddaa">Toplam Gol İddaa Oranları</string>
    <string name="bothTeamScoredResultIddaa">Karş. Gol İddaa Oranları</string>
    <string name="title_activity_league_details">LeagueDetailsActivity</string>
    <string name="goal">Gol</string>
    <string name="asist">Asist</string>
    <string name="redCards">K. Kart</string>
    <string name="yellowCards">S. Kart</string>
    <string name="matches_played">Oynadığı Maçlar</string>
    <string name="fixtures">Fikstür</string>
    <string name="king">Krallığı</string>
    <string name="fixture">Fikstur</string>
    <string name="title_activity_live">LiveActivity</string>
    <string name="tournaments">Turnuvalar</string>
    <string name="failed_to_load_comments">Failed to load comments from the server</string>
    <string name="unable_to_retrive_data_from_server">unable to retrieve data from server, please try again later.</string>
    <string name="live_toolbar">Canlı Sonuçlar</string>
    <string name="lineup">Kadrolar</string>
    <string name="kadro">Kadro</string>
    <string name="noInformationYet">Kadro Bilgisi Henüz Bulunmamaktadır.</string>
    <string name="bench">Yedekler</string>
    <string name="ligTv">tv</string>
    <string name="commentsShort">Tahmin</string>
    <string name="TurkeySuperLeague">Türkiye Süper Ligi</string>
    <string name="superLeagueFlag">tr</string>
    <string name="loginToAccount">Hesabınıza Giriş Yapın</string>
    <string name="username">kullanıcı adı</string>
    <string name="password">şifre</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="cancel">Vazgeç</string>
    <string name="register">Kayıt Ol</string>
    <string name="title_activity_registration">Sign up</string>
    <string name="prompt_email">E-Posta</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Kayıt Ol</string>
    <string name="confirm_password">Şifre Tekrar</string>
    <string name="action_logout">Çıkış</string>
    <string name="prompt_select_estimate">Lütfen bir tahmin seçininiz.</string>
    <string name="votinDisabled">Oy verilme işlemi maç başladıktan sonra yapılamaz</string>
    <string name="subtop35">3.5 Alt-Üst</string>
    <string name="subtop15">IY-1.5 Alt-Üst</string>
    <string name="iyms">IY / MS</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="fa_tv">&#xf26c;</string>
    <string name="fa_glass">&#xf000;</string>
    <string name="fa_music">&#xf001;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_envelope_o">&#xf003;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_star_o">&#xf006;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_film">&#xf008;</string>
    <string name="fa_th_large">&#xf009;</string>
    <string name="fa_th">&#xf00a;</string>
    <string name="fa_th_list">&#xf00b;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_times">&#xf00d;</string>
    <string name="fa_search_plus">&#xf00e;</string>
    <string name="fa_search_minus">&#xf010;</string>
    <string name="fa_power_off">&#xf011;</string>
    <string name="fa_signal">&#xf012;</string>
    <string name="fa_cog">&#xf013;</string>
    <string name="fa_trash_o">&#xf014;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_file_o">&#xf016;</string>
    <string name="fa_clock_o">&#xf017;</string>
    <string name="fa_road">&#xf018;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="fa_inbox">&#xf01c;</string>
    <string name="fa_play_circle_o">&#xf01d;</string>
    <string name="fa_repeat">&#xf01e;</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="fa_list_alt">&#xf022;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_flag">&#xf024;</string>
    <string name="fa_headphones">&#xf025;</string>
    <string name="fa_volume_off">&#xf026;</string>
    <string name="fa_volume_down">&#xf027;</string>
    <string name="fa_volume_up">&#xf028;</string>
    <string name="fa_qrcode">&#xf029;</string>
    <string name="fa_barcode">&#xf02a;</string>
    <string name="fa_tag">&#xf02b;</string>
    <string name="fa_tags">&#xf02c;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_bookmark">&#xf02e;</string>
    <string name="fa_print">&#xf02f;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_font">&#xf031;</string>
    <string name="fa_bold">&#xf032;</string>
    <string name="fa_italic">&#xf033;</string>
    <string name="fa_text_height">&#xf034;</string>
    <string name="fa_text_width">&#xf035;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_list">&#xf03a;</string>
    <string name="fa_outdent">&#xf03b;</string>
    <string name="fa_indent">&#xf03c;</string>
    <string name="fa_video_camera">&#xf03d;</string>
    <string name="fa_picture_o">&#xf03e;</string>
    <string name="fa_pencil">&#xf040;</string>
    <string name="fa_map_marker">&#xf041;</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_tint">&#xf043;</string>
    <string name="fa_pencil_square_o">&#xf044;</string>
    <string name="fa_share_square_o">&#xf045;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_arrows">&#xf047;</string>
    <string name="fa_step_backward">&#xf048;</string>
    <string name="fa_fast_backward">&#xf049;</string>
    <string name="why_u_must_login">Favorilerinize eklediğiniz maçlarla ilgili bildirim alabilmek ve Tahmin Ligine katılabilmek için login olmalısınız.</string>
</resources>