<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.bahisadam.fragment.FixtureFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/team_details"
        android:gravity="center"
        android:textSize="16sp"
        android:textAppearance="?android:textAppearanceLarge"/>
    <android.support.v7.widget.CardView
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#fff"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        card_view:contentPaddingBottom="5dp"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true"
        xmlns:card_view="http://schemas.android.com/apk/res-auto">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/stadium"
                android:id="@+id/text_view_stadium"
                android:background="#f1f3f4"
                android:gravity="center"
                android:layout_alignParentTop="true"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@id/text_view_stadium"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/image_view_stadium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_below="@id/text_view_stadium"
                android:layout_toRightOf="@id/image_view_stadium"
                android:layout_toEndOf="@id/image_view_stadium"
                android:id="@+id/text_view_stadium_name"
                android:fontFamily="sans-serif-medium"
                android:textSize="13sp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#fff"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        card_view:contentPaddingBottom="5dp"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true"
        xmlns:card_view="http://schemas.android.com/apk/res-auto">
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:horizontalSpacing="1dp"
    android:background="#ffffff"
    android:columnCount="2"
    android:rowCount="7">

    <TextView
        android:layout_columnSpan="2"
        android:text="@string/club_information"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:background="#f1f3f4"
        android:layout_height="35dp"
        android:gravity="center"/>
    <TextView
        android:textSize="13sp"
        android:text="@string/club_official_name"
        android:background="#ffffff"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:textSize="13sp"
        android:background="#ffffff"
        android:id="@+id/text_view_club_official_name"/>
    <TextView
        android:textSize="13sp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="#ffffff"
        android:text="@string/year_founded"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:textSize="13sp"
        android:background="#ffffff"
        android:id="@+id/text_view_year_founded"/>
    <TextView
        android:textSize="13sp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="#ffffff"
        android:text="@string/club_head"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:textSize="13sp"
        android:background="#ffffff"
        android:id="@+id/text_view_club_head"/>
    <TextView
        android:textSize="13sp"
        android:background="#ffffff"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/coach"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:textSize="13sp"
        android:background="#ffffff"
        android:id="@+id/text_view_coach"/>
    <TextView
        android:textSize="13sp"
        android:background="#ffffff"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/website"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:textSize="13sp"
        android:background="#ffffff"
        android:id="@+id/text_view_website"
        android:autoLink="web"/>
    <TextView
        android:textSize="13sp"
        android:background="#ffffff"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/twitter"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:textSize="13sp"
        android:background="#ffffff"
        android:id="@+id/text_view_twitter"/>
</GridLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>