<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_marginTop="-1dp"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    android:id="@+id/rootLayout"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-light"
    android:background="?android:attr/selectableItemBackground">

<android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="0dp"
        card_view:cardUseCompatPadding="false"
        card_view:contentPadding="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingTop="@dimen/padding_item"
            android:paddingBottom="@dimen/padding_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingRight="@dimen/padding_item"
                android:paddingLeft="@dimen/padding_item"
                android:id="@+id/homeTeamLogo"/>
            <TextView
                android:layout_gravity="center"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/padding_item"
                android:paddingLeft="@dimen/padding_item"
                android:maxWidth="120dp"
                android:id="@+id/homeTeam"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_item"
            android:paddingBottom="@dimen/padding_item"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingRight="@dimen/padding_item"
                android:paddingLeft="@dimen/padding_item"
                android:id="@+id/awayTeamLogo"/>
            <TextView
                android:layout_gravity="center"
                android:gravity="left"
                android:maxWidth="120dp"
                android:paddingRight="@dimen/padding_item"
                android:paddingLeft="@dimen/padding_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/awayTeam"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:id="@+id/liveLayout"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="23sp"
            android:text="@string/fa_tv"
            android:id="@+id/tv"
            />
        <TextView
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ligTv"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/commentsLayout"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="11dp"
            android:fontFamily="sans-serif-light"
            android:paddingTop="3dp"
            android:id="@+id/comments"
            android:background="@drawable/ic_mode_comment_white_24dp"/>
        <TextView
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commentsShort"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:id="@+id/scoreLayout"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/homeTeamScore"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/awayTeamScore"/>

    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#dfdfdf"
        android:layout_marginTop="@dimen/padding_item"
        android:layout_marginBottom="@dimen/padding_item"/>
    <LinearLayout
        android:paddingTop="@dimen/padding_item"
        android:paddingBottom="@dimen/padding_item"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:id="@+id/notPlayed"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="12sp"
            android:id="@+id/time"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/fa_star_o"
            android:textAlignment="center"
            android:id="@+id/favorite"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:textAlignment="center"
            android:id="@+id/code"/>
    </LinearLayout>
    <LinearLayout

        android:layout_width="0dp"
        android:layout_weight="2"
        android:paddingTop="@dimen/padding_item"
        android:paddingBottom="@dimen/padding_item"
        android:orientation="vertical"
        android:id="@+id/playedPlaying"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/details"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_expand_more_black_24dp"/>
    </LinearLayout>

        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dfdfdf"
        android:layout_marginRight="@dimen/padding_item"
        android:layout_marginLeft="@dimen/padding_item"/>
</android.support.v7.widget.CardView>
</LinearLayout>